# riosaude_export_parquet

./: .env.example  .gitignore  README.md  pipeline.py  pyproject.toml
export_parquet/: db.py  exporter.py
queries/: query.sql
